# Portfolio

./: .gitignore
api/: pyproject.toml  requirements.dev.txt  requirements.txt
api/app/: env.py  main.py
api/src/Portfolio/: env.py  main.py
client/: index.html  package-lock.json  package.json
client/src/: App.css  App.tsx
client/src/types/: projects.ts
